--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -114,7 +114,7 @@
             android:gravity="center"
             android:layout_weight="3"
             android:layout_height="wrap_content"
-            android:text="Carte"
+            android:text="@string/carte"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/transparentWhite"
             app:cornerRadius="@dimen/cornerRadius"
@@ -123,7 +123,7 @@
             android:fontFamily="@font/style4"
             android:textSize="@dimen/style4"
             />
-           <ImageView
+           <!--<ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
@@ -132,23 +132,22 @@
                android:onClick="onClick"
                app:srcCompat="@drawable/photo_ico_black">
 
-           </ImageView>
+           </ImageView>-->
 
     </LinearLayout>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="460dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="horizontal"
         app:cornerRadius="@dimen/cornerRadius"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         tools:context=".Map_Fragment"
-        tools:layout="@layout/activity_maps1" />
+        tools:layout="@layout/activity_maps3"
+        />
 
     <TextView
         android:layout_width="match_parent"
@@ -191,8 +190,9 @@
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:onClick="onClick"
             android:background="@drawable/rounded_corner"
+            android:contentDescription="@string/avocat"
+            android:onClick="onClick"
             app:srcCompat="@drawable/avocat_black">
 
         </ImageView>
@@ -240,6 +240,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onClick"
+            android:contentDescription="@string/pommes"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/pommes_black">
 
