--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -103,7 +103,7 @@
             android:layout_marginLeft="12dp"
             android:textSize="@dimen/style4"
 
-            android:text="Foodies" />
+            android:text="@string/nameOfGalleryActivity" />
 
 
     </LinearLayout>
@@ -137,11 +137,11 @@
             android:textColor="@color/style4"
             android:textSize="@dimen/style4"
 
-            android:text="Carte" />
+            android:text="@string/carte" />
 
 
     </LinearLayout>
-    <LinearLayout
+<!--    <LinearLayout
         android:id="@+id/photos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
             android:text="Photos" />
 
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 
@@ -216,7 +216,43 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:id="@+id/didacticiel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_margin="20dp"
+        android:background="@drawable/rounded_corner"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
+        android:backgroundTint="#C4F4DE"
+        android:onClick="onClick"
+        >
 
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            app:srcCompat="@drawable/learn_green" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:fontFamily="@font/style4"
+            android:textColor="@color/style4"
+            android:textSize="@dimen/style4"
+            android:paddingLeft="5dp"
+
+            android:layout_marginLeft="10dp"
+
+            android:text="@string/didacticiel" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
