--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -84,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/style4"
-                android:text="Photo"
+                android:text="@string/photoActivityName"
                 android:textColor="@color/style4"
 
                 android:textSize="@dimen/style4" />
